testimonials section corrected on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -2649,8 +2649,9 @@ text-align: center;
     }
     
     .testimonial-card {
-        padding: 70px 30px 40px;
-        width:50%;
+
+        width:80%;
+        max-width:350px;
     }
     
     .testimonial-text {
